Finished batching, iterations and feed forwarding, need to work on backpropagation